# frisbee_ai

./: .gitignore  README.md  app.py  infer_local_multiple.py  infer_multiple_images.py  infer_one_image.py  names.py  process_video.py  pyproject.toml  requirements.txt
training/: README.md  train_yolov8_object_detection_on_custom_dataset.ipynb
web_ui/: app.py  output.txt
web_ui/routes/: annotate_video.py  annotations.py  gif.py
web_ui/static/: objects_detected.json
web_ui/static/annotation_data/: womens_goalty_2_annotated_annotation_data.json
web_ui/templates/: annotation_data.html  frame_stats.html  home.html  player_stats.html  stats.html
